# gs-batch

./: .gitignore  CLAUDE.md  CLICK_INVESTIGATION.md  CONTRIBUTING.md  LICENSE  README.md  gs.ps1  gswin64c.ps1  pyproject.toml  test.ipynb  test_out.py  wsl_test.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  version-check.yml
_docs/: pypi-publishing-agent.md
_todo/: README.md  todo.md
_todo/completed/2025-10-10/: feature-graceful-no-files.md  feature-recursion.md
_todo/completed/2025-10-11/: improve-documentation.md
_todo/completed/2025-10-16/: cicd-workflows.md
_todo/completed/2025-10-17/: handle-file-locking.md
_todo/completed/2025-10-19/: handle-file-locking.md
_todo/completed/2025-11-20/: CLICK_INVESTIGATION.md
_todo/pending/: cicd-workflows.md  handle-file-locking.md  improve-documentation.md
_todo/proposal/: add-tests.md  handle-file-locking.md
gs_batch/: get_encoder.py  gs_batch.py
gs_batch/assets/: PDFA_def.ps
tests/: __init__.py  manual.ipynb  manual.py  raw_gs.ps1  test_gsb.py
tests/assets/originals/: PDFA_def.ps  file_1.qmd  file_2.qmd  file_3.qmd
tests/assets/output/: out.txt
